# jawk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: post-release.yml  prepare-dev.yml  release.yml  releasee.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md  examples.md  getting_started.md  help.md  installation.md  introduction.md
docker/: Dockerfile  build.sh
src/: additional_help.rs  basic_functions.rs  boolean_functions.rs  build_docs.rs  const_getter.rs  duplication_remover.rs  extractor.rs  extractors.rs  filter.rs  functions_definitions.rs  grouper.rs  input_context_extractor.rs  json_parser.rs  json_value.rs  lib.rs  limits.rs  list_functions.rs  main.rs  merger.rs  number_functions.rs  object_functions.rs  output.rs  output_style.rs  pre_sets.rs  printer.rs  processor.rs  reader.rs  regex_cache.rs  selection.rs  selection_extractor.rs  selection_help.rs  sorters.rs  splitter.rs  string_functions.rs  type_functions.rs  variables_extractor.rs
src/functions/: all.rs  basic_functions.rs  boolean_functions.rs  exec.rs  list_functions.rs  mod.rs  number_functions.rs  object_functions.rs  string_functions.rs  time_functions.rs  type_functions.rs  variables.rs
src/functions/basic/: condition.rs  default.rs  get.rs  mod.rs  stringify.rs  sub.rs  take.rs  take_last.rs
src/functions/boolean/: and.rs  eq.rs  gt.rs  gte.rs  lt.rs  lte.rs  mod.rs  neq.rs  not.rs  or.rs  xor.rs
src/functions/list/: any.rs  cross.rs  filter.rs  first.rs  flat_map.rs  fold.rs  group_by.rs  indexed.rs  map.rs  mod.rs  push.rs  push_front.rs  reverese.rs  sort.rs  sort_by.rs  zip.rs
src/functions/number/: abs.rs  add.rs  ciel.rs  divide.rs  floor.rs  mod.rs  modulu.rs  reminder.rs  round.rs  take_away.rs  times.rs
src/functions/number_as_string/: abs.rs  add.rs  divide.rs  eq.rs  lt.rs  lte.rs  mod.rs  neq.rs  take_away.rs  times.rs  to_big_decimal.rs
test-files/: test1.json
tests/: integration_test.rs
(+249 files in other folders)
