[package]
name = "jawk"
version = "0.1.13"
edition = "2021"
license = "MIT"
description = "JSON AWK."
homepage = "https://jawk.ykaplan.me/"
repository = "https://github.com/yift/jawk"
documentation = "https://jawk.ykaplan.me/"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.5"
thiserror = "1.0"
indexmap = "2.2"
regex = "1.10"
chrono = "0.4"
cached = "0.52"
base64 = "0.22"
bigdecimal = "0.4"
open = "5.2"
clap-markdown = { version = "0.1", optional = true }
mdbook = { version = "0.4", optional = true }

[features]
default = []
create-docs = ["clap-markdown", "mdbook"]
