[package]
name = "jawk"
version = "0.1.16"
edition = "2024"
license = "MIT"
description = "JSON AWK."
homepage = "https://jawk.ykaplan.me/"
repository = "https://github.com/yift/jawk"
documentation = "https://jawk.ykaplan.me/"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
indexmap = "2.9"
regex = "1.11"
chrono = "0.4"
cached = "0.55"
base64 = "0.22"
bigdecimal = "0.4"
open = "5.3"
clap-markdown = { version = "0.1", optional = true }
mdbook = { version = "0.4", optional = true }

[features]
default = []
create-docs = ["clap-markdown", "mdbook"]
